kubernetes/9router/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/name: 9router
  name: 9router
  namespace: 9router
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 20128
      protocol: TCP
      targetPort: 20128
  selector:
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/name: 9router
