kubernetes/9router/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: 9router
    app.kubernetes.io/name: 9router
  name: nine-router
  namespace: 9router
spec:
  host: 9router.apps.okd.claffey.cloud
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nine-router
    weight: 100
  wildcardPolicy: None
